trunk/Archive2/f1/61b21b1f12075d/output
+ clang -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:22:14: error: no matching function for call to 'foo'
    auto a = foo<int, int>();
             ^~~~~~~~~~~~~
main.cpp:15:10: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'X'
Outer<X> foo() {
         ^
1 error generated.
